feat: correcao sonar